// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Library listing (e2e) > filters, sorts both ways and pages the books library consistently 1`] = `
{
  "added asc": [
    "Dracula",
    "Circe",
    "Éloge de l'ombre",
    "Project Hail Mary",
    "Dune",
    "Ulysses",
  ],
  "added desc": [
    "Ulysses",
    "Dune",
    "Project Hail Mary",
    "Éloge de l'ombre",
    "Circe",
    "Dracula",
  ],
  "author asc": [
    "Circe",
    "Ulysses",
    "Dune",
    "Dracula",
    "Project Hail Mary",
    "Éloge de l'ombre",
  ],
  "author desc": [
    "Éloge de l'ombre",
    "Project Hail Mary",
    "Dracula",
    "Dune",
    "Ulysses",
    "Circe",
  ],
  "finished asc": [
    "Dune",
    "Project Hail Mary",
    "Ulysses",
    "Dracula",
    "Circe",
    "Éloge de l'ombre",
  ],
  "finished desc": [
    "Éloge de l'ombre",
    "Circe",
    "Dune",
    "Project Hail Mary",
    "Ulysses",
    "Dracula",
  ],
  "pages asc": [
    "Ulysses",
    "Dracula",
    "Éloge de l'ombre",
    "Circe",
    "Project Hail Mary",
    "Dune",
  ],
  "pages desc": [
    "Dune",
    "Project Hail Mary",
    "Circe",
    "Éloge de l'ombre",
    "Ulysses",
    "Dracula",
  ],
  "progress asc": [
    "Ulysses",
    "Dracula",
    "Project Hail Mary",
    "Dune",
    "Circe",
    "Éloge de l'ombre",
  ],
  "progress desc": [
    "Circe",
    "Éloge de l'ombre",
    "Dune",
    "Project Hail Mary",
    "Ulysses",
    "Dracula",
  ],
  "rating asc": [
    "Project Hail Mary",
    "Ulysses",
    "Éloge de l'ombre",
    "Dracula",
    "Circe",
    "Dune",
  ],
  "rating desc": [
    "Dune",
    "Circe",
    "Dracula",
    "Project Hail Mary",
    "Ulysses",
    "Éloge de l'ombre",
  ],
  "started asc": [
    "Ulysses",
    "Dracula",
    "Éloge de l'ombre",
    "Circe",
    "Project Hail Mary",
    "Dune",
  ],
  "started desc": [
    "Dune",
    "Project Hail Mary",
    "Circe",
    "Ulysses",
    "Dracula",
    "Éloge de l'ombre",
  ],
  "status asc": [
    "Dracula",
    "Circe",
    "Éloge de l'ombre",
    "Dune",
    "Project Hail Mary",
    "Ulysses",
  ],
  "status desc": [
    "Ulysses",
    "Dune",
    "Project Hail Mary",
    "Circe",
    "Éloge de l'ombre",
    "Dracula",
  ],
  "title asc": [
    "Ulysses",
    "Project Hail Mary",
    "Éloge de l'ombre",
    "Dune",
    "Dracula",
    "Circe",
  ],
  "title asc, favorites, fr": [
    "Éloge de l'ombre",
    "Dune",
  ],
  "title desc": [
    "Circe",
    "Dracula",
    "Dune",
    "Éloge de l'ombre",
    "Project Hail Mary",
    "Ulysses",
  ],
  "unknown asc": [
    "Dracula",
    "Circe",
    "Éloge de l'ombre",
    "Project Hail Mary",
    "Dune",
    "Ulysses",
  ],
  "unknown desc": [
    "Ulysses",
    "Dune",
    "Project Hail Mary",
    "Éloge de l'ombre",
    "Circe",
    "Dracula",
  ],
  "{"favorite":true}": [
    "Dune",
    "Éloge de l'ombre",
  ],
  "{"q":"%"}": [],
  "{"q":"d"}": [
    "Dune",
    "Éloge de l'ombre",
    "Dracula",
  ],
  "{"statuses":["READ"],"favorite":true}": [
    "Éloge de l'ombre",
  ],
  "{"statuses":["READING"]}": [
    "Dune",
    "Project Hail Mary",
  ],
  "{}": [
    "Ulysses",
    "Dune",
    "Project Hail Mary",
    "Éloge de l'ombre",
    "Circe",
    "Dracula",
  ],
}
`;

exports[`Library listing (e2e) > filters, sorts both ways and pages the games library consistently 1`] = `
{
  "added asc": [
    "Anthem",
    "Celeste",
    "Balatro",
    "Hollow Knight",
    "Hades II",
    "Elden Ring",
  ],
  "added desc": [
    "Elden Ring",
    "Hades II",
    "Hollow Knight",
    "Balatro",
    "Celeste",
    "Anthem",
  ],
  "finished asc": [
    "Hades II",
    "Elden Ring",
    "Anthem",
    "Hollow Knight",
    "Celeste",
    "Balatro",
  ],
  "finished desc": [
    "Balatro",
    "Celeste",
    "Hades II",
    "Elden Ring",
    "Anthem",
    "Hollow Knight",
  ],
  "playtime asc": [
    "Elden Ring",
    "Anthem",
    "Celeste",
    "Hollow Knight",
    "Hades II",
    "Balatro",
  ],
  "playtime desc": [
    "Balatro",
    "Hades II",
    "Celeste",
    "Hollow Knight",
    "Anthem",
    "Elden Ring",
  ],
  "rating asc": [
    "Celeste",
    "Elden Ring",
    "Hollow Knight",
    "Anthem",
    "Balatro",
    "Hades II",
  ],
  "rating desc": [
    "Hades II",
    "Balatro",
    "Anthem",
    "Celeste",
    "Elden Ring",
    "Hollow Knight",
  ],
  "started asc": [
    "Celeste",
    "Elden Ring",
    "Anthem",
    "Balatro",
    "Hollow Knight",
    "Hades II",
  ],
  "started desc": [
    "Hades II",
    "Hollow Knight",
    "Balatro",
    "Celeste",
    "Elden Ring",
    "Anthem",
  ],
  "status asc": [
    "Anthem",
    "Balatro",
    "Celeste",
    "Hades II",
    "Hollow Knight",
    "Elden Ring",
  ],
  "status desc": [
    "Elden Ring",
    "Hades II",
    "Hollow Knight",
    "Balatro",
    "Celeste",
    "Anthem",
  ],
  "title asc": [
    "Hollow Knight",
    "Hades II",
    "Elden Ring",
    "Celeste",
    "Balatro",
    "Anthem",
  ],
  "title asc, favorites, fr": [
    "Hades II",
    "Celeste",
  ],
  "title desc": [
    "Anthem",
    "Balatro",
    "Celeste",
    "Elden Ring",
    "Hades II",
    "Hollow Knight",
  ],
  "unknown asc": [
    "Anthem",
    "Celeste",
    "Balatro",
    "Hollow Knight",
    "Hades II",
    "Elden Ring",
  ],
  "unknown desc": [
    "Elden Ring",
    "Hades II",
    "Hollow Knight",
    "Balatro",
    "Celeste",
    "Anthem",
  ],
  "{"favorite":true}": [
    "Hades II",
    "Celeste",
  ],
  "{"q":"%"}": [],
  "{"q":"ho"}": [
    "Hollow Knight",
  ],
  "{"statuses":["COMPLETED","DROPPED"]}": [
    "Balatro",
    "Celeste",
    "Anthem",
  ],
  "{"statuses":["PLAYING"],"favorite":true}": [
    "Hades II",
  ],
  "{"statuses":["PLAYING"]}": [
    "Hades II",
    "Hollow Knight",
  ],
  "{}": [
    "Elden Ring",
    "Hades II",
    "Hollow Knight",
    "Balatro",
    "Celeste",
    "Anthem",
  ],
}
`;

exports[`Library listing (e2e) > filters, sorts both ways and pages the media library consistently 1`] = `
{
  "added asc": [
    "Lost",
    "The Wire",
    "Dark",
    "Severance",
    "Arrival",
    "Andor",
    "Saison 2",
    "saison 10",
    "Frieren",
    "Dune",
  ],
  "added desc": [
    "Dune",
    "Frieren",
    "saison 10",
    "Saison 2",
    "Andor",
    "Arrival",
    "Severance",
    "Dark",
    "The Wire",
    "Lost",
  ],
  "finished asc": [
    "Andor",
    "Dark",
    "Severance",
    "Frieren",
    "Lost",
    "Dune",
    "saison 10",
    "Saison 2",
    "The Wire",
    "Arrival",
  ],
  "finished desc": [
    "Arrival",
    "The Wire",
    "Andor",
    "Dark",
    "Severance",
    "Frieren",
    "Lost",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "progress asc": [
    "Frieren",
    "Arrival",
    "Dune",
    "saison 10",
    "Saison 2",
    "Lost",
    "Dark",
    "Andor",
    "Severance",
    "The Wire",
  ],
  "progress desc": [
    "Severance",
    "The Wire",
    "Andor",
    "Dark",
    "Lost",
    "Frieren",
    "Arrival",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "rating asc": [
    "Severance",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
    "Lost",
    "Dark",
    "Andor",
    "Arrival",
    "The Wire",
  ],
  "rating desc": [
    "The Wire",
    "Andor",
    "Arrival",
    "Dark",
    "Lost",
    "Severance",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "recent asc": [
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
    "The Wire",
    "Dark",
    "Arrival",
    "Severance",
    "Andor",
    "Lost",
  ],
  "recent desc": [
    "Lost",
    "Andor",
    "Severance",
    "Arrival",
    "Dark",
    "The Wire",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "started asc": [
    "Frieren",
    "Lost",
    "Arrival",
    "Dune",
    "saison 10",
    "Saison 2",
    "The Wire",
    "Dark",
    "Severance",
    "Andor",
  ],
  "started desc": [
    "Andor",
    "Severance",
    "Dark",
    "The Wire",
    "Frieren",
    "Lost",
    "Arrival",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "status asc": [
    "Lost",
    "The Wire",
    "Arrival",
    "Severance",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
    "Andor",
    "Dark",
  ],
  "status desc": [
    "Andor",
    "Dark",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
    "Severance",
    "The Wire",
    "Arrival",
    "Lost",
  ],
  "title asc": [
    "The Wire",
    "Severance",
    "saison 10",
    "Saison 2",
    "Lost",
    "Frieren",
    "Dune",
    "Dark",
    "Arrival",
    "Andor",
  ],
  "title asc, favorites, fr": [
    "Severance",
    "Arrival",
    "Andor (VF)",
  ],
  "title desc": [
    "Andor",
    "Arrival",
    "Dark",
    "Dune",
    "Frieren",
    "Lost",
    "Saison 2",
    "saison 10",
    "Severance",
    "The Wire",
  ],
  "unknown asc": [
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
    "The Wire",
    "Dark",
    "Arrival",
    "Severance",
    "Andor",
    "Lost",
  ],
  "unknown desc": [
    "Lost",
    "Andor",
    "Severance",
    "Arrival",
    "Dark",
    "The Wire",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "{"favorite":true}": [
    "Andor",
    "Severance",
    "Arrival",
  ],
  "{"lang":"fr","q":"cou"}": [
    "Sur écoute",
  ],
  "{"lang":"fr"}": [
    "Lost",
    "Andor (VF)",
    "Severance",
    "Arrival",
    "Dark",
    "Sur écoute",
    "Frieren",
    "Dune : première partie",
    "saison 10",
    "Saison 2",
  ],
  "{"q":"%"}": [],
  "{"q":"an"}": [
    "Andor",
    "Severance",
  ],
  "{"statuses":["COMPLETED","UP_TO_DATE"]}": [
    "Severance",
    "Arrival",
    "The Wire",
  ],
  "{"statuses":["DORMANT"]}": [
    "Dark",
  ],
  "{"statuses":["DROPPED"]}": [
    "Lost",
  ],
  "{"statuses":["PLANNED"]}": [
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "{"statuses":["WATCHING"]}": [
    "Andor",
    "Dark",
  ],
  "{"types":["MOVIE"]}": [
    "Arrival",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
  "{"types":["SERIES","ANIME"]}": [
    "Lost",
    "Andor",
    "Severance",
    "Dark",
    "The Wire",
    "Frieren",
  ],
  "{}": [
    "Lost",
    "Andor",
    "Severance",
    "Arrival",
    "Dark",
    "The Wire",
    "Frieren",
    "Dune",
    "saison 10",
    "Saison 2",
  ],
}
`;

exports[`Library listing (e2e) > filters, sorts both ways and pages the music library consistently 1`] = `
{
  "added asc": [
    "Discovery",
    "Abbey Road",
    "Kid A",
    "Ágætis byrjun",
    "Blonde",
  ],
  "added desc": [
    "Blonde",
    "Ágætis byrjun",
    "Kid A",
    "Abbey Road",
    "Discovery",
  ],
  "artist asc": [
    "Abbey Road",
    "Kid A",
    "Blonde",
    "Discovery",
    "Ágætis byrjun",
  ],
  "artist desc": [
    "Ágætis byrjun",
    "Discovery",
    "Blonde",
    "Kid A",
    "Abbey Road",
  ],
  "finished asc": [
    "Blonde",
    "Abbey Road",
    "Kid A",
    "Ágætis byrjun",
    "Discovery",
  ],
  "finished desc": [
    "Discovery",
    "Ágætis byrjun",
    "Kid A",
    "Blonde",
    "Abbey Road",
  ],
  "rating asc": [
    "Blonde",
    "Abbey Road",
    "Ágætis byrjun",
    "Discovery",
    "Kid A",
  ],
  "rating desc": [
    "Kid A",
    "Discovery",
    "Blonde",
    "Abbey Road",
    "Ágætis byrjun",
  ],
  "status asc": [
    "Kid A",
    "Discovery",
    "Ágætis byrjun",
    "Blonde",
    "Abbey Road",
  ],
  "status desc": [
    "Blonde",
    "Abbey Road",
    "Kid A",
    "Discovery",
    "Ágætis byrjun",
  ],
  "title asc": [
    "Kid A",
    "Discovery",
    "Blonde",
    "Ágætis byrjun",
    "Abbey Road",
  ],
  "title asc, favorites, fr": [
    "Kid A",
    "Ágætis byrjun",
  ],
  "title desc": [
    "Abbey Road",
    "Ágætis byrjun",
    "Blonde",
    "Discovery",
    "Kid A",
  ],
  "unknown asc": [
    "Discovery",
    "Abbey Road",
    "Kid A",
    "Ágætis byrjun",
    "Blonde",
  ],
  "unknown desc": [
    "Blonde",
    "Ágætis byrjun",
    "Kid A",
    "Abbey Road",
    "Discovery",
  ],
  "{"favorite":true}": [
    "Ágætis byrjun",
    "Kid A",
  ],
  "{"q":"%"}": [],
  "{"q":"b"}": [
    "Blonde",
    "Ágætis byrjun",
    "Abbey Road",
  ],
  "{"statuses":["LISTENED"]}": [
    "Ágætis byrjun",
    "Kid A",
    "Discovery",
  ],
  "{}": [
    "Blonde",
    "Ágætis byrjun",
    "Kid A",
    "Abbey Road",
    "Discovery",
  ],
}
`;
